--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.18.1",
   "dependencies": {
+    "@prisma/client": "6.18.0",
     "dotenv": "17.2.3",
     "fastify": "5.6.1",
     "zod": "4.1.12"
@@ -24,6 +25,7 @@
     "eslint": "9.38.0",
     "globals": "16.4.0",
     "jiti": "2.6.1",
+    "prisma": "6.18.0",
     "tsup": "8.5.0",
     "tsx": "4.20.6",
     "typescript": "5.9.3",
