--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start:dev": "tsx watch src/server.ts",
     "start": "node build/server.js",
-    "build": "tsup src --out-dir build"
+    "build": "tsup src --out-dir build",
+    "migrate": "pnpm dlx prisma migrate dev"
   },
   "keywords": [],
   "author": "",
