--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
   "packageManager": "pnpm@10.18.1",
   "dependencies": {
     "@prisma/client": "6.18.0",
+    "bcryptjs": "3.0.2",
     "dotenv": "17.2.3",
     "fastify": "5.6.1",
     "zod": "4.1.12"
   },
   "devDependencies": {
     "@eslint/js": "9.38.0",
+    "@types/bcryptjs": "3.0.0",
     "@types/node": "24.9.2",
     "eslint": "9.38.0",
     "globals": "16.4.0",
