chore: add vitest

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start:dev": "tsx watch src/server.ts",
     "start": "node build/server.js",
     "build": "tsup src --out-dir build",
-    "migrate": "pnpm dlx prisma migrate dev"
+    "migrate": "pnpm dlx prisma migrate dev",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "keywords": [],
   "author": "",
@@ -32,6 +34,8 @@
     "tsup": "8.5.0",
     "tsx": "4.20.6",
     "typescript": "5.9.3",
-    "typescript-eslint": "8.46.2"
+    "typescript-eslint": "8.46.2",
+    "vite-tsconfig-paths": "5.1.4",
+    "vitest": "4.0.6"
   }
 }
