--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "build": "tsup src --out-dir build",
     "migrate": "pnpm dlx prisma migrate dev",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui"
   },
   "keywords": [],
   "author": "",
@@ -27,6 +29,8 @@
     "@eslint/js": "9.38.0",
     "@types/bcryptjs": "3.0.0",
     "@types/node": "24.9.2",
+    "@vitest/coverage-v8": "4.0.6",
+    "@vitest/ui": "4.0.6",
     "eslint": "9.38.0",
     "globals": "16.4.0",
     "jiti": "2.6.1",
