--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
-    "test:ui": "vitest --ui"
+    "test:ui": "vitest --ui",
+    "prettier": "prettier --write ."
   },
   "keywords": [],
   "author": "",
@@ -35,6 +36,7 @@
     "eslint": "9.38.0",
     "globals": "16.4.0",
     "jiti": "2.6.1",
+    "prettier": "3.6.2",
     "prisma": "6.18.0",
     "tsup": "8.5.0",
     "tsx": "4.20.6",
