--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.18.1",
   "dependencies": {
+    "@fastify/jwt": "10.0.0",
     "@prisma/client": "6.18.0",
     "bcryptjs": "3.0.2",
     "dayjs": "1.11.19",
