--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "start": "node build/server.js",
     "build": "tsup src --out-dir build",
     "migrate": "pnpm dlx prisma migrate dev",
-    "test": "vitest run",
-    "test:watch": "vitest",
+    "test": "vitest run --dir src/use-cases",
+    "test:watch": "vitest --dir src/use-cases",
+    "test:unit": "vitest run --project=unit",
+    "test:e2e": "vitest run --project=e2e",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui",
     "prettier": "prettier --write ."
@@ -29,20 +31,18 @@
     "zod": "4.1.12"
   },
   "devDependencies": {
-    "@eslint/js": "9.38.0",
+    "@biomejs/biome": "2.3.13",
     "@types/bcryptjs": "3.0.0",
     "@types/node": "24.9.2",
     "@vitest/coverage-v8": "4.0.6",
     "@vitest/ui": "4.0.6",
-    "eslint": "9.38.0",
     "globals": "16.4.0",
     "jiti": "2.6.1",
-    "prettier": "3.6.2",
+    "npm-run-all": "4.1.5",
     "prisma": "6.18.0",
     "tsup": "8.5.0",
     "tsx": "4.20.6",
     "typescript": "5.9.3",
-    "typescript-eslint": "8.46.2",
     "vite-tsconfig-paths": "5.1.4",
     "vitest": "4.0.6"
   }
